--- a/danielsjr.css
+++ b/danielsjr.css
@@ -260,10 +260,12 @@ img{
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-    /* img{
+@media only screen and (min-resolution: 192dpi) {
+    img{
         width: 300px;
         max-width: 300px;
-    } */
+    }
+  }
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 
